public/css/style.css
* {
	margin: 0;
	padding: 0;
}

body {
	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
	font-size: 18px;
	padding: 0;
	position: absolute;
	width: 100%;
	height: 100%;
	margin: 0;
	background-color: aliceblue;
}

.navbar-header {
	position: absolute;
	width: 100%;
	border-bottom: 0.3rem solid rgba(207, 165, 48, 0.849);
	padding-bottom: 0.5rem;
	background-color: #f7eded;
}

#auth-buttons-div {
	width: 35%;
	padding-right: 2%;
}
#auth-buttons-div button {
	margin: 0.3rem;
	background-color: rgba(207, 165, 48, 0.849);
	/* background: red; */
	padding: 0.5rem;
	border-radius: 10%;
}

#auth-buttons-div a {
	/* padding: .5rem; */
}

.auth-div {
	width: 25%;
	display: block;
	background: #f7eded;
	margin: 15% auto;
	padding: 0.7rem 0;
	border-radius: 10% 10%;
	text-align: center;
}

#main-nav-ul,
li {
	float: left;
}

#main-nav-ul li {
	display: inline-block;
	margin-left: 0;
}

#main-nav-ul {
	float: left;
	padding-left: 10%;
}

#main-nav-ul,
div {
	display: inline;
}
#main-nav-ul li:last-child {
	margin-right: 0;
}
a:link {
	text-decoration: none;
	color: rgb(36, 8, 163);
}

a:hover {
	color: rgb(82, 4, 82);
	font-size: 1.3rem;
	/* border: 0.1rem dashed rgba(207, 165, 48, 0.849); */
}

a:active {
	color: red;
}

ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

ul li {
	margin: 0.7rem;
}

#navbar-main {
	display: block;
	background-color: #f7eded;
	height: 100%;
	float: left;
	width: 100%;
}
#navbar-main div,
#navbar-main div button {
	float: right;
}

.form-group {
	display: inline-block;
	margin: 0.2rem;
	text-align: center;
	width: 80%;
}

.form-group input {
	width: 80%;
	margin-top: 0.5rem;
	padding: 0.5rem;
	text-align: center;
	border-top-style: hidden;
	border-right-style: hidden;
	border-left-style: hidden;
	border-bottom-style: groove;
	background-color: #eee;
}
.no-outline:focus {
	outline: none;
}
.form-group button {
	margin-top: 1rem;
	padding: 0.5rem;
	width: 40%;
	background-color: rgba(207, 165, 48, 0.849);
	color: rgb(36, 8, 163);
	border-radius: 15%;
}

